# ChangeLog for sys-apps/qingy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/qingy/ChangeLog,v 1.74 2014/07/19 14:09:13 pacho Exp $

*qingy-1.0.0-r2 (19 Jul 2014)

  19 Jul 2014; Pacho Ramos <pacho@gentoo.org> +files/qingy_at.service,
  +qingy-1.0.0-r2.ebuild:
  Add unit file (#517348 by Jose Romildo Malaquias)

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> qingy-1.0.0-r1.ebuild,
  qingy-1.0.0.ebuild:
  Update libgcrypt dep to use slot :0.

*qingy-1.0.0-r1 (26 Jan 2014)

  26 Jan 2014; Mark Wright <gienah@gentoo.org> +qingy-1.0.0-r1.ebuild,
  metadata.xml, qingy-1.0.0.ebuild:
  qingy-1.0.0: fix bug #359637 Updating sys-apps/qingy-1.0.0 autotools files:
  thanks to Justin for reporting, hal and axs for testing, Justin and s4t4n for
  fixing. Fix bug #462634 - sys-apps/qingy-1.0.0 build error: Thanks to Ole
  Langbehn for reporting, Rafal Muzylo, Ellison Marks, needle and Stephan
  Litterst for help. qingy-1.0.0-r1: Fix bug #372675 - sys-apps/qingy fails to
  keep ConsoleKit PAM session open with default setting (using DirectFB: Thanks
  to guboj for reporting, Richard Kenney for testing, Tomoh K. and s4t4n for
  fixing. Patches are from qingy upstream subversion.

  27 May 2013; Ulrich Müller <ulm@gentoo.org> files/50qingy-gentoo.el:
  Autoload correct function in Emacs site-init file, bug 392029.

  05 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> qingy-1.0.0.ebuild,
  +files/qingy-1.0.0-tinfo.patch:
  Use pkg-config instead of AC_CHECK_LIB to get ncurses libraries wrt #459650
  by Diego Elio Pettenò

  02 Feb 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup up due #48914

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> qingy-1.0.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  11 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> qingy-1.0.0.ebuild:
  ppc stable wrt #348540

  22 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> qingy-1.0.0.ebuild:
  amd64 stable wrt #348540
