@@ -10,14 +10,14 @@ DIST qingy-1.0.0-screensavers.patch.gz 17372 SHA256 586e1d6e615252d7870789ed2a84
 DIST qingy-1.0.0.tar.bz2 611393 SHA256 de4b4b398d5ba81ab2544729864676a04ddc6ae818b357ee09a8770293740cd3 SHA512 79af86de9d1530f429f21a32ef6542987f62f6b5461fe5ba6553deb4fcf36d5746cdb3c6ae8d7c08ace298dd4304cb90a11203239ac7f5c2093c3c5b80f34b54 WHIRLPOOL 6282fc649d2be91adae544732cef0e10ca77083b18c9cd2fdd3c6369061f797903e98bac34e01095ed7e060a3f12845d6d5523f3ff9e7979c3105dc8388aa24c
 DIST qingy-gentoo-theme-2.1.tar.bz2 150702 SHA256 1b770255577ed3fc89e1cfdf5019990bf4deffab26201e095084dd5bd97bf093 SHA512 4e5e35f3f14c831e3a383e846018cd39b07761c7f1977f94923ae8889383a3cc5f63cd061b85174c076488e697018ff58bdac3ddaeefab352a3058700a130abd WHIRLPOOL 2ef7e404a1e14229c895cb96de0dd3749e0e9837b884f2f16b71a741140586a56f52a85d2e942bc2963af2ea174d134d811e72655995285f827a16df9c671147
 EBUILD qingy-1.0.0-r1.ebuild 4092 SHA256 73a22c6e5ffefda7a0e2cb14e7681393208985d288e18a168f470c47e199dc58 SHA512 09623319b05740632ce1dff634aef5acbd0b865c2eed2ad0e8bb812cdcfcebbff835511166b8e66899312eea543e983e1fd108360f7a35d6a2f02c3e4f57b6e4 WHIRLPOOL d54340aefb85c30f5cb67986372e323e741f997e0e3797fe06de4b95607471a275c0797ea96c5607c17e49178da530471096a355315391dc921f493f9a7c5c86
-EBUILD qingy-1.0.0-r2.ebuild 4165 SHA256 7ce0e910e92258626c8a6ee0a5467610b84dfc89614566042ed0cf4f10e3a366 SHA512 ec9201c203400f5161d0d43d9fcdc21c3605784566921364db6b15a5f697ec3d0f8422f9387adf192a4a0a294911c80af9e3f25730e99b0f95d50652f5648a61 WHIRLPOOL f6892567c0ecdb5090b31c4bba6bf7cfaf9d409af1e0451f2e0002240fd67aef1bb932ad013c38df29a17fa7281996023295f2d9b7147d40545fa05376cc12c9
+EBUILD qingy-1.0.0-r2.ebuild 4164 SHA256 3fdbe30b5535c4f21577649aded070f9d8d167fda6a74b057d316ca13dfe0bf1 SHA512 afdbfc123d0b5753025878ce003af37902c0159a50cfffb90982b6135773bc0c12e4095280c97e0c04b8001649bf74a1adf85b2366e0e2f146ba54a4eea48365 WHIRLPOOL 077d3d46f388469b4b72e58a14e6f85cd73c49e815043881d16ec28c23f7694716a6c506dda43c9074008c44546c6295bd334a45d8680461848a6ab47c935d6e
 EBUILD qingy-1.0.0.ebuild 3821 SHA256 0eec530849c8fad42ee125c0eedf9cd8d85fa7bb193754ca5f5fa1367e9f9e47 SHA512 baa4c7baf93e445b8f66de6a1aada81a8570c1df4069ec7d2c330b48f81f23a61dd0b1dfe850528fd425e632a5b5c82d1fbdbb8838fc629aff750153c18a3861 WHIRLPOOL 3f78e3e81b04642c1a20941b9f301d6a9d6e7a875d4b8597711b9d6dd63c556d30485ca070c1ad10ab0bc3ddf7c0ea126b2bc509494c918ca4590d14f378898c
-MISC ChangeLog 12143 SHA256 cde26dae1f58b747d35db7d95115467afc196950106707ec42f45c023862cfe1 SHA512 ce3f17b46ce738c6b2a2ced71f9ab432b10ce0f9597e02e6d4aeb7617fdb14cde291a3f9e79f659b21f3e7b279d16c00c546399479de9c46d6ee0f45b6cf4b29 WHIRLPOOL 3d1e1bd5ca7ab50c947e054d127b570c65085757d0141b87e7306671b3521188bbdfabb352fdd141945f7566ac8a7f2003f3b136cc1deb9bef6dc68766bed3ad
+MISC ChangeLog 12242 SHA256 5ad635a8b28fe55204688a7166cd47879515825ed3cc83294b3bd74f90a62e48 SHA512 f382c58ef4cbc5a28ea0d0250762738e1486e7209fc31e734d4f01f9a719301f62ffefeddf928c6777f7846fbfa62d4ac09b998e27332a0f990a49a4f4b1e2c6 WHIRLPOOL 5e25fab003db101ef5b95f7f1216613f69783f617947ad18135d3c2ef2cc94047ed0f63d4a570f4c6ec6f5d8de4f97741f5a104cdbd80e2315cfab79c89c9a42
 MISC metadata.xml 361 SHA256 dacf3c034464d1eb369aacf6c8d0fb752f11d0aa043760a565064ea74e24a971 SHA512 d64644ff50cd4c3bde01a511d586062615a3c73a552fe8309849eb4f09bb7a3056c78c724659f20bc0cd177d15acb656d28be7f30d508eba2e1a46a32cd3612d WHIRLPOOL 859ce1dc41b4b8c03f2fd02216dc0beac9a015e826e6c2dfdb83467beb2018271e727211c810a46f59b637f4026854b84dc97b5203cf03f1a1728f83e4f74c4f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPKfAoACgkQCaWpQKGI+9SongCffGI86Di0O/0cC8/MOqu8oyPG
-CygAn2nmiQNc8WR7OU//LHQ0Sxhd0v5x
-=SsnQ
+iEYEAREIAAYFAlVV0BQACgkQCaWpQKGI+9RLdwCfZSQA8rdV36Jr8Fec6HU/FUJ8
+1pgAnA39v5hz+wlZuKHBUBGrE0HA9jno
+=RjUg
 -----END PGP SIGNATURE-----
