@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/qingy
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/qingy/ChangeLog,v 1.74 2014/07/19 14:09:13 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/qingy/ChangeLog,v 1.75 2015/05/15 10:53:07 pacho Exp $
+
+  15 May 2015; Pacho Ramos <pacho@gentoo.org> qingy-1.0.0-r2.ebuild:
+  ppc stable wrt bug #522712
 
 *qingy-1.0.0-r2 (19 Jul 2014)
 
